--- a/nyhedsbrev_produkter/nyhedsStyle.css
+++ b/nyhedsbrev_produkter/nyhedsStyle.css
@@ -1,3 +1,15 @@
+#wrapper {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+}
+
 form input {
     display: block;
+}
+
+form {
+    background-color: beige;
+    border: 2px solid black;
+    width: 40%;
 }
